[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/states/IdleState.gd" type="Script" id=1]
[ext_resource path="res://src/states/GreatSwordSlash.gd" type="Script" id=2]
[ext_resource path="res://src/states/WalkState.gd" type="Script" id=3]
[ext_resource path="res://src/states/RollState.gd" type="Script" id=4]
[ext_resource path="res://src/states/RunState.gd" type="Script" id=5]




[sub_resource type="GDScript" id=1]

[node name="StateMachine" type="Node"]
script = SubResource( 1 )

[node name="IdleState" type="Node" parent="."]
script = ExtResource( 1 )

[node name="WalkState" type="Node" parent="."]
script = ExtResource( 3 )

[node name="RunState" type="Node" parent="."]
script = ExtResource( 5 )

[node name="RollState" type="Node" parent="."]
script = ExtResource( 4 )

[node name="DefaultAttackState" type="Node" parent="."]
script = ExtResource( 2 )
